# galactic-goofs

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: ec8a92dfd892_create_spacecraft_table.py
app/: config.py  main.py
app/routers/: spacecraft.py
app/services/: db.py  event.py  spacecraft.py
templates/: index.html  spacecraftCreate.html  spacecraftItem.html  spacecraftList.html
