[tool.poetry]
name = "galactic-goofs"
version = "0.1.0"
description = ""
authors = ["Stefan Woskowiak <swoskowiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = {extras = ["async"], version = "^2.0.30"}
alembic = "^1.13.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
